<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_desc"
        android:src="@drawable/geo_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="240dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letter_prompt"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/letterSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="49dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/wordDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/word_desc_prompt"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="290dp"
        android:ems="15"
        android:inputType="textAutoCorrect" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_msg"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="175dp" />

</FrameLayout>
